# caitlyn

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build.cmd  build.sh  install.cmd  install.sh
cmake/: CaitlynConfig.cmake.in  caitlynConfig.cmake.in
docs/: contributing.md  contributor-license-agreement.md  installation.md  quick-start.md
docs/usage/: error.md  file.md  formatting.md  io-operations.md  numeric.md  serializing.md  testing.md  traits.md  unicode.md  utilities.md
include/Caitlyn/: Algorithms  Caitlyn  Char  Collections  DateTime  Error  File  IO  Memory  Numeric  Serializing  String  System  Testing  Threading  Traits  Utility  __Base.h  __Caitlyn.h
include/Caitlyn/__Caitlyn/: Application.h  Config.h  Namespace.h  Types.h
include/Caitlyn/__Core/: Algorithms.h  Char.h  Collections.h  DateTime.h  Error.h  File.h  IO.h  Memory.h  Numeric.h  String.h  System.h  Threads.h  Traits.h  Utility.h
include/Caitlyn/__Core/Char/: Char.h  Defs.h  Utility.h
include/Caitlyn/__Core/Collections/: Utility.h
include/Caitlyn/__Core/Error/: Expected.h  Unexpected.h
include/Caitlyn/__Core/File/: File.h
include/Caitlyn/__Core/IO/: Console.h  Stream.h
include/Caitlyn/__Core/Memory/: Types.h  Utility.h
include/Caitlyn/__Core/Numeric/: Types.h  Utility.h
include/Caitlyn/__Core/String/: Algorithms.h  Defs.h  String.h  StringBuilder.h  Utility.h
include/Caitlyn/__Core/Traits/: Constraints.h  Types.h
include/Caitlyn/__Core/Utility/: Comparators.h  Random.h
include/Caitlyn/__Numeric/: Types.h
include/Caitlyn/__Numeric/Types/: BigFloat.h  BigInteger.h
include/Caitlyn/__Serializing/: Json.h
include/Caitlyn/__Serializing/Json/: Defs.h  Types.h  Utility.h
include/Caitlyn/__Testing/: Macro.h  Types.h
include/Caitlyn/__Testing/Macro/: Assert.h  Test.h  TestFixture.h
include/Caitlyn/__Testing/Types/: TestCase.h  TestFailMessage.h  TestFunction.h  TestRegistry.h
include/caitlyn/: __base.h  __caitlyn.h  __detail.h  algorithms  base.h  caitlyn  caitlyn.h  char  containers  core.h  date_time  error  file  io  math  memory  num.h  numeric  ser.h  serializing  string  system  test.h  testing  text  threading  traits  utility
include/caitlyn/__caitlyn/: application.h  config.h  namespace.h  types.h
include/caitlyn/__core/: algo.h  char.h  containers.h  date.h  date_time.h  error.h  file.h  format.h  io.h  math.h  memory.h  numeric.h  string.h  system.h  text.h  threads.h  time.h  traits.h  utility.h
include/caitlyn/__core/char/: defs.h  types.h  utility.h
include/caitlyn/__core/containers/: utility.h
include/caitlyn/__core/error/: expected.h  unexpected.h
include/caitlyn/__core/io/: print.h
include/caitlyn/__numeric/: types.h
include/caitlyn/__serializing/: json.h
include/caitlyn/__testing/: macro.h  types.h
include/caitlyn/core/: algo.h  char.h  containers.h  core.h  date.h  date_time.h  error.h  file.h  format.h  io.h  math.h  memory.h  numeric.h  string.h  system.h  text.h  threads.h  time.h  traits.h  unicode.h  utility.h
include/caitlyn/num/: num.h  types.h
include/caitlyn/ser/: json.h  ser.h
include/caitlyn/test/: macro.h  types.h
lib/cmake/caitlyn/: CaitlynTargets.cmake  caitlynConfig.cmake  caitlynTargets.cmake
test/: CMakeLists.txt  main.cc  main.cpp
test/Core/Algorithms/: AlgorithmsTest.cpp
test/Core/Error/: AndThenTest.cpp  CatchError.cpp  ConstructorSuccessTest.cpp  FoldTest.cpp  OnErrorTest.cpp
test/Core/IO/: IOTest.cpp
test/Core/Memory/: MemoryTest.cpp
test/Core/System/: SystemTest.cpp
test/Core/Threads/: ThreadsTest.cpp
test/Core/Time/: TimeTest.cpp
test/Core/Traits/: TraitsTest.cpp
test/Numeric/: BigFloatTest.cpp
test/Serializing/Json/: CorrectJsonTest.cpp  TrailingCommaTest.cpp
test/core/: arch_definition_test.cc  basic_types_size.cc  caitlyn_definition_test.cc  compiler_definition_test.cc  os_definition_test.cc  standard_definition_test.cc
test/core/Char/: CharTest.cpp
test/core/Collections/: CollectionsTest.cpp
test/core/Date/: DateTest.cpp
test/core/Error/: MapErrorTest.cpp  OrElseTest.cpp  ThenTest.cpp  UnwrapOrTest.cpp
test/core/File/: FileTest.cpp
test/core/algo/: algo_test.cc
test/core/char/: char_test.cc
test/core/conteiners/: containers_test.cc
test/core/date/: date_test.cc
test/core/defs/: arch_definition_test.cc  basic_types_size.cc  caitlyn_definition_test.cc  compiler_definition_test.cc  os_definition_test.cc  standard_definition_test.cc
test/core/error/: AndThenTest.cpp  CatchError.cpp  ConstructorErrorTest.cpp  ConstructorSuccessTest.cpp  CustomizeTest.cpp  FoldTest.cpp  InspectTest.cpp  MapErrorTest.cpp  MapTest.cpp  OnErrorTest.cpp  OrElseTest.cpp  ThenTest.cpp  UnwrapOrElseTest.cpp  UnwrapOrTest.cpp  and_then_test.cc  catch_error.cc  constructor_error_test.cc  constructor_success_test.cc  customize_test.cc  fold_test.cc  inpect_test.cc  map_error_test.cc  map_test.cc  on_error.cc  or_else_test.cc  then_test.cc  unwrap_or_else_test.cc  unwrap_or_test.cc
test/core/file/: file_test.cc
test/core/format/: format_test.cc
test/core/io/: io_test.cc
test/core/math/: math_test.cc
test/core/memory/: memory_test.cc
test/core/numeric/: NumericTest.cpp  numeric_test.cc
test/core/string/: StringTest.cpp  string_test.cc
test/core/system/: system_test.cc
test/core/text/: text_test.cc
test/core/threads/: threads_test.cc
test/core/time/: time_test.cc
test/core/traits/: traits_test.cc
test/core/unicode/: unicode_char_test.cc  unicode_string_test.cc
test/core/unicode/char/: unicode_char_test.cc
test/core/unicode/string/: unicode_string_test.cc
test/core/utility/: UtilityTest.cpp  utility_test.cc
test/num/: num_test.cc
test/numeric/: BigIntegerTest.cpp  pwrint_test.cc  pwrnum_test.cc
test/ser/json/: correct_json_test.cc  init_test.cc  io_operator_test.cc  trailing_comma_test.cc  unexpected_chars_test.cc
test/serializing/json/: CorrectJsonTest.cpp  IOOperatorTest.cpp  InitTest.cpp  UnexpectedCharsTest.cpp  correct_json_test.cc  init_test.cc  io_operator_test.cc  trailing_comma_test.cc  unexpected_chars_test.cc
(+336 files in other folders)
